# shopping_agent

./: README.md
shopping_agent/: pyproject.toml
shopping_agent/src/: .env
shopping_agent/src/shopping_agent/: inventory.json  main.py
