[project]
name = "shopping-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zain Mehdi", email = "zm55866@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai[tools]>=0.102.0",
    "langchain-community>=0.3.18",
    "langchain-google-genai>=2.0.11",
    "litellm>=1.60.2",
    "python-dotenv>=1.0.1",
]

[project.scripts]
shopping-agent = "shopping_agent.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
